--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -36,3 +36,4 @@ Snipaste_2025-08-08_16-49-56.png=@Snipaste_2025-08-08_16-49-56.png,0
 Snipaste_2025-08-08_16-52-18.png=@Snipaste_2025-08-08_16-52-18.png,0
 Snipaste_2025-08-08_16-51-27.png=@Snipaste_2025-08-08_16-51-27.png,0
 Snipaste_2025-08-08_16-54-52.png=@Snipaste_2025-08-08_16-54-52.png,0
+Snipaste_2025-08-08_16-53-04.png=@Snipaste_2025-08-08_16-53-04.png,0
