--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,9 +38,9 @@
                 "-f",
                 "interface/cmsis-dap.cfg",
                 "-f",
-                "target/stm32h7x.cfg",
+                "target/stm32f4x.cfg",
                 "-c",
-                "program ./build/LED_CMake.elf verify reset exit"
+                "program ./build/LED_CMake_C.elf verify reset exit"
             ],
             "group": {
                 "kind": "build",
@@ -55,9 +55,28 @@
                 "-f",
                 "interface/stlink.cfg",
                 "-f",
-                "target/stm32h7x.cfg",
+                "target/stm32f4x.cfg",
                 "-c",
-                "program ./build/LED_CMake.elf verify reset exit"
+                "program ./build/LED_CMake_C.elf verify reset exit"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            }
+        },
+        {
+            "label": "Flash(J-Link)",
+            "type": "shell",
+            "command": "D:/RoboMaster/电控/JLink/JLink.exe",
+            "args": [
+                "-device",
+                "STM32",
+                "-if",
+                "SWD",
+                "-speed",
+                "80000",
+                "-CommanderScript",
+                "./flash.jlink"
             ],
             "group": {
                 "kind": "build",
