修改tasks.json文件，加快编译速度

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,12 +18,12 @@
         {
             "label": "CMake Build",
             "type": "shell",
-            "command": "cmake",
+            "command": "ninja",
             "args": [
-                "--build",
-                "build",
-                "--target",
-                "all"
+                "-j",
+                "20",
+                "-C",
+                "build"
             ],
             "group": {
                 "kind": "build",
