--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -38,3 +38,24 @@ Snipaste_2025-08-08_16-51-27.png=@Snipaste_2025-08-08_16-51-27.png,0
 Snipaste_2025-08-08_16-54-52.png=@Snipaste_2025-08-08_16-54-52.png,0
 Snipaste_2025-08-08_16-53-04.png=@Snipaste_2025-08-08_16-53-04.png,0
 Snipaste_2025-08-09_08-47-28.png=@Snipaste_2025-08-09_08-47-28.png,0
+Snipaste_2025-08-13_07-37-35.png=@Snipaste_2025-08-13_07-37-35.png,0
+Snipaste_2025-08-13_07-36-29.png=@Snipaste_2025-08-13_07-36-29.png,0
+Snipaste_2025-08-13_07-35-23.png=@Snipaste_2025-08-13_07-35-23.png,0
+Snipaste_2025-08-13_07-34-48.png=@Snipaste_2025-08-13_07-34-48.png,0
+Snipaste_2025-08-13_07-34-25.png=@Snipaste_2025-08-13_07-34-25.png,0
+Snipaste_2025-08-13_07-30-49.png=@Snipaste_2025-08-13_07-30-49.png,0
+Snipaste_2025-08-13_07-30-27.png=@Snipaste_2025-08-13_07-30-27.png,0
+Snipaste_2025-08-13_07-55-33.png=@Snipaste_2025-08-13_07-55-33.png,0
+Snipaste_2025-08-13_07-55-02.png=@Snipaste_2025-08-13_07-55-02.png,0
+Snipaste_2025-08-13_07-54-25.png=@Snipaste_2025-08-13_07-54-25.png,0
+Snipaste_2025-08-13_07-52-45.png=@Snipaste_2025-08-13_07-52-45.png,0
+Snipaste_2025-08-13_07-52-23.png=@Snipaste_2025-08-13_07-52-23.png,0
+Snipaste_2025-08-13_07-51-39.png=@Snipaste_2025-08-13_07-51-39.png,0
+Snipaste_2025-08-13_07-46-04.png=@Snipaste_2025-08-13_07-46-04.png,0
+Snipaste_2025-08-13_07-45-30.png=@Snipaste_2025-08-13_07-45-30.png,0
+Snipaste_2025-08-13_07-43-45.png=@Snipaste_2025-08-13_07-43-45.png,0
+Snipaste_2025-08-13_07-43-09.png=@Snipaste_2025-08-13_07-43-09.png,0
+Snipaste_2025-08-13_07-41-50.png=@Snipaste_2025-08-13_07-41-50.png,0
+Snipaste_2025-08-13_07-41-05.png=@Snipaste_2025-08-13_07-41-05.png,0
+Snipaste_2025-08-13_07-40-04.png=@Snipaste_2025-08-13_07-40-04.png,0
+Snipaste_2025-08-13_07-39-24.png=@Snipaste_2025-08-13_07-39-24.png,0
