--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -59,3 +59,11 @@ Snipaste_2025-08-13_07-41-50.png=@Snipaste_2025-08-13_07-41-50.png,0
 Snipaste_2025-08-13_07-41-05.png=@Snipaste_2025-08-13_07-41-05.png,0
 Snipaste_2025-08-13_07-40-04.png=@Snipaste_2025-08-13_07-40-04.png,0
 Snipaste_2025-08-13_07-39-24.png=@Snipaste_2025-08-13_07-39-24.png,0
+Snipaste_2025-09-27_16-41-37.png=@Snipaste_2025-09-27_16-41-37.png,0
+Snipaste_2025-09-27_16-40-40.png=@Snipaste_2025-09-27_16-40-40.png,0
+Snipaste_2025-09-27_16-40-07.png=@Snipaste_2025-09-27_16-40-07.png,0
+Snipaste_2025-09-27_16-38-56.png=@Snipaste_2025-09-27_16-38-56.png,0
+Snipaste_2025-09-27_16-38-39.png=@Snipaste_2025-09-27_16-38-39.png,0
+Snipaste_2025-09-27_16-37-57.png=@Snipaste_2025-09-27_16-37-57.png,0
+Snipaste_2025-09-27_16-37-37.png=@Snipaste_2025-09-27_16-37-37.png,0
+Snipaste_2025-09-27_16-36-13.png=@Snipaste_2025-09-27_16-36-13.png,0
